--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Business Consulting Projekte
-description: [A short description of your site's purpose]
+description: Dies ist ein Repository, welches Projekte während meiner Anstellung als Business Consultant bei der Capita Customer Services AG enthält.
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
